End to end workflow webhook to aws lambda result

--- a/sqs-lambda-tutorial/serverless.yml
+++ b/sqs-lambda-tutorial/serverless.yml
@@ -20,6 +20,9 @@ functions:
     environment:
       SQS_URL:
         Ref: SQSQueue
+    events:
+      - http: POST start
+
   
   end-lambda:
     handler: handler.end
